added Dom elements

--- a/index.html
+++ b/index.html
@@ -10,22 +10,28 @@
 <body>
     <div class="match-one">
         12
-        <textarea name="name" class="match-one" onfocus="this.value=''"></textarea>
-        <button class="button-primary calculateBtn" on type="button" name="button">Add number</button>
     </div>
+
     <script type="text/javascript x-template" class='match-one'>
-        function getRandomInt() {
-            var max = 12;
-            return Math.floor(Math.random() * Math.floor(max));
-        }
-        console.log(getRandomInt(3));
-        // expected output: 0, 1 or 2
+        document.addEventListener('DOMContentLoaded', function () {
 
-        console.log(getRandomInt(1));
-        // expected output: 0
+            var num = document.querySelector(".match-number");
+            
 
-        console.log(Math.random());
-        // expected output: a number between 0 and 1
+            function getRandomInt(num = 1) {
+                return Math.floor(Math.random() * Math.floor(num));
+            }
+          
+
+            function update(){
+                getRandomInt();
+            }
+
+            getRandomInt();
+            update();
+            console.log(getRandomInt());
+            // expected output: a number between 0 and 1
+        });
     </script>
 </body>
 
